--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | News homepage</title>
@@ -16,45 +16,83 @@
 </head>
 <body>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+  <header>
+    <img src="assets/images/logo.svg" alt="website logo" title="website logo">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>New</li>
+        <li>Popular</li>
+        <li>Trending</li>
+        <li>Categories</li>
+      </ul>
+    </nav>
+  </header>
 
-  The Bright Future of Web 3.0?
+  <main>
+    <section id="welcome">
+      <div class="container-left">
+        <img src="assets/images/image-web-3-desktop.jpg" alt="web 3.0">
+        <h1>The bright future of web 3.0 ?</h1>
+        <p class="subtitle">
+          We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+          But is it really fulfilling its promise?
+        </p>
+        <div class="button">
+          <button class="read-more">Read more</button>
+        </div>
+      </div>
+      <div class="container-right">
+        <h2>New</h2>
+        <div class="new-content">
+          <article>
+            <h3>Hydrogen VS Electric Car</h3>
+            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </article>
+          <hr>
+          <article>
+            <h3>The Downsides of AI Artistry</h3>
+            <p>What are the possible adverse effects of on-demand AI image generation?</p>
+          </article>
+          <hr>
+          <article>
+            <h3>Is VC Funding Drying Up?</h3>
+            <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+    <section id="top-articles">
+      <article>
+        <img src="assets/images/image-retro-pcs.jpg" alt="Retro PCs" title="Retro PCs">
+        <div class="top-article-text">
+          <div class="article-number">01</div>
+          <h4>Reviving retro PCs</h4>
+          <p>What happens when old PCs are given modern upgrades</p>
+        </div>
+      </article>
+      <article>
+        <img src="assets/images/image-top-laptops.jpg" alt="TOP 10 laptops" title="Retro PCs">
+        <div class="top-article-text">
+          <div class="article-number">02</div>
+          <h4>Top 10 Laptops of 2022</h4>
+          <p>Our best picks for various needs and budgets.</p>
+        </div>
+      </article>
+      <article>
+        <img src="assets/images/image-gaming-growth.jpg" alt="Gaming controler" title="gaming controler">
+        <div class="top-article-text">
+          <div class="article-number">01</div>
+          <h4>The Growth of Gaming</h4>
+          <p>How the pandemic has sparked fresh opportunities.</p>
+        </div>
+      </article>
+    </section>
+  </main>
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
